--- a/index.html
+++ b/index.html
@@ -13,12 +13,17 @@
     <div class="container">
       <h2>Password Generator</h2>
       <div class="result-container">
-        <span id="result"></span>
+        <span id="result" contenteditable="true" onkeyup="trigger()"></span>
         <button class="btn" id="clipboard">
           <i class="far fa-clipboard"></i>
         </button>
       </div>
-      <div class="settings">
+      <div class="indicator">
+        <span class="weak"></span>
+        <span class="medium"></span>
+        <span class="strong"></span>
+      </div>
+      <class="settings">
         <div class="setting">
           <label>Password length</label>
           <input type="number" id="length" min='4' max='20' value='20' />
@@ -39,8 +44,7 @@
           <label>Include symbols</label>
           <input type="checkbox" id="symbols" checked />
         </div>
-      </div>
-      <button class="btn btn-large" id="generate">
+      </class=><button class="btn btn-large" id="generate">
         Generate password
       </button>
     </div>
